# CoinEdit2

./: .gitignore  CMakeLists.txt  README.md  celldialog.cpp  celldialog.h  coin.cpp  coin.h  coinedit.cpp  coinedit.h  coinedit2.pro  graphics.cpp  graphics.h  main.cpp  pic.qrc  res.qrc  texteditor.cpp  texteditor.h
